run OpenRewrite recipes